Laste version before JAM changes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div id="start-overlay">
       <button type="button" id="start-terminal-btn" class="start-terminal-btn">РЈРІС–РјРєРЅСѓС‚Рё С‚РµСЂРјС–РЅР°Р»</button>
     </div>
+    <button type="button" id="fullscreen-button" class="fullscreen-button" title="Повноекранний режим" aria-label="Повноекранний режим"></button>
     <div id="terminal-screen">
       <div id="bg"></div>
       <div id="terminal-noise" class="terminal-noise" aria-hidden="true"></div>
